<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".activities.LoginActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/vinyl1"
            android:id="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:contentDescription="@string/appIconDescription"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/oswald"
            android:textColor="#000000" android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:id="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginTop="24dp"/>

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="#FFFFFF"
            android:fontFamily="@font/oswald"
            android:textSize="14sp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/oswald"
            android:textColor="#000000"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="#FFFFFF"
            android:fontFamily="@font/oswald"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            android:importantForAutofill="no"/>

    <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textAllCaps="false"
            android:text="@string/logIn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="#9E9E9E"
            android:fontFamily="@font/oswald"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/register"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="1.0"/>

    <Button
            android:text="@string/goToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:id="@+id/register"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.1"
            android:textStyle="bold"
            android:fontFamily="@font/oswald"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:fontFamily="@font/oswald"
            android:textSize="30sp" android:textStyle="bold"
            android:textColor="#000000" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <TextView
            android:text="@string/greetingLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:fontFamily="@font/oswald"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>