<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="Layout">

        <Preference
                app:key="profile"
                app:title="Profielfoto"
                app:summary="Verander je profielfoto"
                app:icon="@drawable/ic_person_black_24dp"
        />

        <Preference
                app:key="cover"
                app:title="Omslagfoto"
                app:summary="Verander je omslagfoto"
                app:icon="@drawable/ic_photo_black_24dp"
        />

    </PreferenceCategory>

    <PreferenceCategory
            app:title="Uw persoonlijke informatie">

        <EditTextPreference
                app:key="username"
                app:title="Gebruikersnaam"
                app:summary="Verander je gebruikersnaam"
                app:icon="@drawable/ic_edit_black_24dp"/>

        <EditTextPreference
                app:key="password"
                app:title="Wachtwoord"
                app:summary="Verander je wachtwoord"
                app:icon="@drawable/ic_edit_black_24dp"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="Over ons">

        <Preference
                app:key="about_fragment"
                app:title="Over deze app"
                app:icon="@drawable/ic_info_black_24dp"
                app:fragment="com.hogent.dikkeploaten.fragments.AboutFragment"
        />

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
                app:key="logout"
                app:title="Uitloggen"
                app:icon="@drawable/ic_exit_to_app_black_24dp"
        />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
